refactor(store): change store methods to async
