# bin/routes/v1.js
@@ -6,25 +6,22 @@ let router = new Router();
 // Base path for routes below
 router.prefix("/v1");
 // Routes
-router.get("/ping", ctx => {
-    ctx.body = { success: true, message: "hello world" };
+router.get("/topics", async (ctx) => {
+    ctx.body = await ctx.store.getSlice(0, 20);
 });
-router.get("/topics", ctx => {
-    ctx.body = ctx.store.getSlice(0, 20);
-});
-router.post("/topics/create", ctx => {
+router.post("/topics/create", async (ctx) => {
     const newTopic = new models_1.Topic(ctx.request.body.text, ctx.request.body.username);
-    ctx.store.insertItem(newTopic);
-    ctx.body = ctx.store.getSlice(0, 20);
+    await ctx.store.insertItem(newTopic);
+    ctx.body = await ctx.store.getSlice(0, 20);
 });
-router.put("/topics/:id/vote", ctx => {
+router.put("/topics/:id/vote", async (ctx) => {
     const id = ctx.params.id;
     const action = ctx.request.body.action;
-    let topic = ctx.store.updateItemById(id, action);
-    if (topic) {
-        ctx.body = ctx.store.getSlice(0, 20);
+    try {
+        await ctx.store.updateItemById(id, action);
+        ctx.body = await ctx.store.getSlice(0, 20);
     }
-    else {
+    catch (e) {
         throw new Error("ID not found");
     }
 });
